# kamping-pDCX

./: .gitmodules  CMakeLists.txt  README.md
prefix_doubling_comparison/: mpi_prefix_doubling.hpp  thrill_prefix_doubling.cpp
prefix_doubling_comparison/dsss_mpi/: allgather.hpp  allreduce.hpp  alltoall.hpp  big_type.hpp  broadcast.hpp  distribute_data.hpp  distribute_input.hpp  environment.hpp  gather.hpp  induce.hpp  requestable_array.hpp  scan.hpp  scatter.hpp  shift.hpp  sort.hpp  type_mapper.hpp  zip.hpp
src/: CMakeLists.txt  Makefile.am  common.h  kamping_dc.cpp  mpi_dc.cpp
